<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:clickable="true">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5">


            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginBottom="16dp"
                android:elevation="6dp"
                card_view:cardCornerRadius="8dp"
                card_view:cardUseCompatPadding="true"
                card_view:contentPadding="20dp">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:src="@mipmap/video" />

                    <com.mobileoid2.celltone.CustomWidget.TextView.TextVeiwEuro55Regular
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/upload_video"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp" />

                </LinearLayout>


            </android.support.v7.widget.CardView>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5">

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view_mic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginBottom="16dp"
                android:elevation="6dp"
                card_view:cardCornerRadius="8dp"
                card_view:cardUseCompatPadding="true"
                card_view:contentPadding="20dp">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:src="@mipmap/mike" />

                    <com.mobileoid2.celltone.CustomWidget.TextView.TextVeiwEuro55Regular
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/upload_audio"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp" />

                </LinearLayout>


            </android.support.v7.widget.CardView>

        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layout_record_audio"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBlackTranslucent"
        android:clickable="true"
        android:paddingBottom="50dp"
        android:paddingEnd="30dp"
        android:paddingStart="30dp"
        android:paddingTop="100dp"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/dialog_root"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <RelativeLayout
                android:id="@+id/layout_upper"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5.5"
                android:background="@drawable/shape_layout_purple_upper">

                <com.mobileoid2.celltone.CustomWidget.TextView.TextVeiwEuro55Regular
                    android:id="@+id/text_view_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/_00_00"
                    android:textColor="@android:color/white"
                    android:textSize="30sp" />

                <com.mobileoid2.celltone.CustomWidget.TextView.TextVeiwEuro55Regular
                    android:id="@+id/text_view_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:textColor="@android:color/white" />


            </RelativeLayout>


            <LinearLayout
                android:id="@+id/recording_actions"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4.5"
                android:background="@drawable/shape_layout_white_lower"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_layout_white_lower"
                    android:gravity="center">


                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3.0">

                        <ImageButton
                            android:id="@+id/image_button_left"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:background="@android:color/transparent"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:src="@mipmap/play_icon" />
                    </RelativeLayout>


                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4.0">

                        <ImageButton
                            android:id="@+id/image_button_center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:background="@android:color/transparent"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:src="@mipmap/pause_icon" />

                    </RelativeLayout>


                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3.0">

                        <ImageButton
                            android:id="@+id/image_button_right"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:background="@android:color/transparent"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:src="@mipmap/play_icon" />

                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>